@@ -11,6 +11,7 @@ Version 0.3.5 - ??
 - [BC-break] WFSelect will now "pushBindings" even if it is disabled. This shouldn't cause any problem since the data is immutable on the form, but is being listed as a BC here out of an abundance of caution.
 - [bugfix] WFYAHOO_widget_ColorPicker now works properly when used as a prototype for WFDynamic.
 - [new] WFYAHOO_widget_ColorPicker will bootstrap its own text field if none supplied.
+- [bugfix, BC-break] WFYAHOO_widget_Module, when set to build "programmatically", now defaults to being added to document.body rather than "inline" in the DOM where it is rendered. Previously it was always rendered inline, which made it very fragile to layout clipping and accidental creation of nested forms. YUI recommends the new behavior. I *thought* that I had already made this fix, but there was a bug. The BC-break is for existing uses of YUI containers that accidentally relied on the inline DOM positioning of the Container and didn't already have code (like setRenderTo()) to force inline rendering.
 
 Version 0.3.4 - 1/8/2010
 - [new] Now PEAR-installable! pear channel-discover apinstein.pearfarm.org; pear install apinstein/phocoa
